--- a/public/index.html
+++ b/public/index.html
@@ -483,13 +483,14 @@
 
           <div class="col-lg-3 col-md-4 col-6 wow fadeInUp" data-wow-delay="0.3s">
             <div class="member">
-              <img src="img/team-5.jpg" class="img-fluid" alt="">
+              <img src="img/team-dev2.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Vitor Guilherme</h4>
                   <span>Desenvolvedor</span>
                   <div class="social">
-                    <a href="https://www.instagram.com/phfrois01/"><i class="fa fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/vitorgui7.cs/"><i class="fa fa-instagram"></i></a>
+                    <a href="https://www.linkedin.com/in/vitor-guilherme-910b3a185/"><i class="fa fa-linkedin"></i></a>
                   </div>
                 </div>
               </div>
