--- a/public/index.html
+++ b/public/index.html
@@ -315,51 +315,55 @@
 
               <div class="testimonial-item">
                 <img src="img/testimonial-1.jpg" class="testimonial-img" alt="">
-                <h3>Saul Goodman</h3>
-                <h4>Ceo &amp; Founder</h4>
+                <h3>Alisson</h3>
+                <h4>Cliente</h4>
                 <p>
-                  Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium
-                  quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                  "Gostaria de parabenizar toda a equipe da Pet Dealers.
+                  O atendimento foi impecável, o produto é de excelente qualidade
+                  e o prazo de entrega foi antecipado. Tudo muito organizado e com certeza superaram minhas expectativas.
+                  Já indiquei a Pet Dealers para outras pessoas e vou continuar indicando"
                 </p>
               </div>
 
               <div class="testimonial-item">
                 <img src="img/testimonial-2.jpg" class="testimonial-img" alt="">
-                <h3>Sara Wilsson</h3>
-                <h4>Designer</h4>
-                <p>
-                  Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis
-                  quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+                <h3>Stefany</h3>
+                <h4>Cliente</h4>
+                <p class="text-left">
+                  “Fui bem atendida, produto de qualidade, quando precisei de manutenção fui atendida tão
+                  logo possível, indiquei a Pet Dealers. Obrigada e já me inscrevi para receber e-mails sobre os produtos”
                 </p>
               </div>
 
               <div class="testimonial-item">
                 <img src="img/testimonial-3.jpg" class="testimonial-img" alt="">
-                <h3>Jena Karlis</h3>
-                <h4>Store Owner</h4>
+                <h3>Milena</h3>
+                <h4>Cliente</h4>
                 <p>
-                  Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim
-                  tempor labore quem eram duis noster aute amet eram fore quis sint minim.
+                  “Fiquei encantada com o profissionalismo desta empresa, principalmente, o produto.
+                  Funcionários atenciosos e competentes. Parabéns”
                 </p>
               </div>
 
               <div class="testimonial-item">
                 <img src="img/testimonial-4.jpg" class="testimonial-img" alt="">
-                <h3>Matt Brandon</h3>
-                <h4>Freelancer</h4>
+                <h3>Fernando</h3>
+                <h4>Cliente</h4>
                 <p>
-                  Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit
-                  minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
+                  "A Pet Dealers está de parabéns, desde a venda até o pós-venda sempre foram profissionais.
+                  Os funcionários são organizados, educados e fizeram um ótimo serviço. A empresa cumpriu o
+                  prazo estipulado e o produto é muito bom"
                 </p>
               </div>
 
               <div class="testimonial-item">
                 <img src="img/testimonial-5.jpg" class="testimonial-img" alt="">
-                <h3>John Larson</h3>
-                <h4>Entrepreneur</h4>
+                <h3>Paulo</h3>
+                <h4>Cliente</h4>
                 <p>
-                  Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa
-                  labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
+                  "Conheci a Pet Dealers através de indicação de um cliente satisfeito com os produtos e o atendimento.
+                  O atendimento é diferenciado, explicando o produto, prazo de entrega e
+                  condição de pagamento. Além de muito satisfeito, já fiz propagandas para meus amigos e conhecidos. Parabéns".
                 </p>
               </div>
 
@@ -511,9 +515,10 @@
 
             <div class="col-lg-4 col-md-6 footer-info">
               <h3>Pet Dealers</h3>
-              <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies
-                darta donna mare fermentum iaculis eu non diam phasellus. Scelerisque felis imperdiet proin fermentum
-                leo. Amet volutpat consequat mauris nunc congue.</p>
+              <p>Uma nova tecnologia para revolucionar o mundo dos Nossos
+                animais de estimação, com a pet tech, seu pet poderá se alimentar sozinho,
+                otimizando o tempo dos pais.
+              </p>
             </div>
 
             <div class="col-lg-4 col-md-4 col-6 footer-contact">
@@ -530,10 +535,11 @@
 
             <div class="col-lg-3 col-md-4 col-6 footer-newsletter">
               <h4>Receba notícias</h4>
-              <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna veniam enim veniam illum dolore
-                legam minim quorum culpa amet magna export quem marada parida nodela caramase seza.</p>
+              <p>receba notícias sobre nossos produtos atuais, tendências, e também futuros
+                produtos que estão por vir !
+              </p>
               <form action="" method="post">
-                <input type="email" name="email"><input type="submit" value="Inscrever-se">
+                <input type="email" name="email"><input type="submit" value="Inscreva-se">
               </form>
             </div>
 
