--- a/public/index.html
+++ b/public/index.html
@@ -195,19 +195,17 @@
           </div>
           <div class="col-md-6 col-lg-5 wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
             <div class="box">
-              <div class="icon"><i class="ion-ios-speedometer-outline" style="color:#41cf2e;"></i></div>
-              <h4 class="title"><a href="">Magni Dolores</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-                mollit anim id est laborum</p>
+              <div class="icon"><i class="ion-ios-box-outline" style="color:#41cf2e;"></i></div>
+              <h4 class="title"><a href="">Produto</a></h4>
+              <p class="description">Pet Dealers é a melhor empresa do ramo de fabricação de produtos para animais domésticos.</p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-5 offset-lg-1 wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
             <div class="box">
-              <div class="icon"><i class="ion-ios-world-outline" style="color: #d6ff22;"></i></div>
-              <h4 class="title"><a href="">Nemo Enim</a></h4>
-              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
-                praesentium voluptatum deleniti atque</p>
+              <div class="icon"><i class="ion-ios-heart-outline" style="color: red;"></i></div>
+              <h4 class="title"><a href="">Bem-estar</a></h4>
+              <p class="description">Com transparência, ética, responsabilidade social e ambiental, a Pet Dealers tem como maior objetivo o bem estar de seu animal de estimação.</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-5 wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
@@ -215,7 +213,7 @@
               <div class="icon"><i class="ion-ios-clock-outline" style="color: #4680ff;"></i></div>
               <h4 class="title"><a href="">Economia de Tempo</a></h4>
               <p class="description">Pet Dealers para aqueles que amam seus bichinhos de estimação e pensado
-                para otimizar o tempo dos pais</p>
+                para otimizar o tempo dos pais.</p>
             </div>
           </div>
 
@@ -231,28 +229,19 @@
       <div class="container">
         <header class="section-header">
           <h3>Por que nos escolher?</h3>
-          <p>Laudem latine persequeris id sed, ex fabulas delectus quo. No vel partiendo abhorreant vituperatoribus.</p>
+          <p>a Pet Dealers possui os melhores produtos e o melhor atendimento</p>
         </header>
 
         <div class="row row-eq-height justify-content-center">
 
           <div class="col-lg-4 mb-4">
             <div class="card wow bounceInUp">
-              <i class="fa fa-diamond"></i>
+              <i class="text-white fa fa-inbox"></i>
               <div class="card-body">
-                <h5 class="card-title">Corporis dolorem</h5>
-                <p class="card-text">Deleniti optio et nisi dolorem debitis. Aliquam nobis est temporibus sunt ab
-                  inventore officiis aut voluptatibus.</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 mb-4">
-            <div class="card wow bounceInUp">
-              <i class="fa fa-language"></i>
-              <div class="card-body">
-                <h5 class="card-title">Voluptates dolores</h5>
-                <p class="card-text">Voluptates nihil et quis omnis et eaque omnis sint aut. Ducimus dolorum aspernatur.
+                <h5 class="card-title">Melhor produto</h5>
+                <p class="card-text">
+                  Produtos que trazem segurança aos consumidores,
+                  garantindo bem estar aos animais.
                 </p>
               </div>
             </div>
@@ -260,10 +249,25 @@
 
           <div class="col-lg-4 mb-4">
             <div class="card wow bounceInUp">
-              <i class="fa fa-object-group"></i>
+              <i class="text-white fa fa-credit-card"></i>
               <div class="card-body">
-                <h5 class="card-title">Eum ut aspernatur</h5>
-                <p class="card-text">Autem quod nesciunt eos ea aut amet laboriosam ab. Eos quis porro in non nemo ex.
+                <h5 class="card-title">Melhor atendimento</h5>
+                <p class="card-text">
+                  Com base na experiências de nossos clientes.
+                </p>
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 mb-4">
+            <div class="card wow bounceInUp">
+              <i class="text-white fa fa-calendar-check-o"></i>
+              <div class="card-body">
+                <h5 class="card-title">Profissionalismo</h5>
+                <p class="card-text">
+                  Funcionários capacitados para dar a melhor
+                  experiência para os pets e os clientes.
                 </p>
               </div>
             </div>
